se agrego demo de bitmap a base64 y viceversa

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".storage.StorageActivity" />
+        <activity android:name=".bitmap_b64.BitmapB64Activity" />
     </application>
 
 </manifest>
