--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ar.com.maxwell.android_warehouse">
 
+    <uses-feature android:name="android.hardware.location.gps" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +22,7 @@
         </activity>
         <activity android:name=".storage.StorageActivity" />
         <activity android:name=".bitmap_b64.BitmapB64Activity" />
+        <activity android:name=".geolocalization.LocationActivity" />
     </application>
 
 </manifest>
