--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-feature android:name="android.hardware.location.gps" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -23,6 +25,7 @@
         <activity android:name=".storage.StorageActivity" />
         <activity android:name=".bitmap_b64.BitmapB64Activity" />
         <activity android:name=".geolocalization.LocationActivity" />
+        <activity android:name=".camera.SimpleCameraActivity" />
     </application>
 
 </manifest>
