--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".storage.StorageActivity" />
-        <activity android:name=".bitmap_b64.BitmapB64Activity" />
-        <activity android:name=".geolocalization.LocationActivity" />
-        <activity android:name=".camera.SimpleCameraActivity" />
+        <activity android:name=".storage.StorageActivity" android:parentActivityName=".MainActivity" />
+        <activity android:name=".bitmap_b64.BitmapB64Activity" android:parentActivityName=".MainActivity" />
+        <activity android:name=".geolocalization.LocationActivity" android:parentActivityName=".MainActivity" />
+        <activity android:name=".camera.SimpleCameraActivity" android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
