--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,22 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
 
+    // RECYCLERVIEW
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    // GSON
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // BEGIN RETROFIT
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+    // END RETROFIT
+
+    // BEGIN GLIDE
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    // END GLIDE
 }
