--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -26,6 +28,7 @@
         <activity android:name=".bitmap_b64.BitmapB64Activity" android:parentActivityName=".MainActivity" />
         <activity android:name=".geolocalization.LocationActivity" android:parentActivityName=".MainActivity" />
         <activity android:name=".camera.SimpleCameraActivity" android:parentActivityName=".MainActivity" />
+        <activity android:name=".network.CatPhotoActivity" android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
