--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".geolocalization.LocationActivity" android:parentActivityName=".MainActivity" />
         <activity android:name=".camera.SimpleCameraActivity" android:parentActivityName=".MainActivity" />
         <activity android:name=".network.CatPhotoActivity" android:parentActivityName=".MainActivity" />
+        <activity android:name=".viewpager.SimpleVPActivity" android:theme="@style/Theme.AppCompat.NoActionBar" />
     </application>
 
 </manifest>
