--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,10 @@
         <activity android:name=".storage.StorageActivity" android:parentActivityName=".MainActivity" />
         <activity android:name=".bitmap_b64.BitmapB64Activity" android:parentActivityName=".MainActivity" />
         <activity android:name=".geolocalization.LocationActivity" android:parentActivityName=".MainActivity" />
+
+        <activity android:name=".camera.CustomCameraActivity" android:parentActivityName=".MainActivity" />
         <activity android:name=".camera.SimpleCameraActivity" android:parentActivityName=".MainActivity" />
+
         <activity android:name=".network.CatPhotoActivity" android:parentActivityName=".MainActivity" />
         <activity android:name=".viewpager.SimpleVPActivity" android:theme="@style/Theme.AppCompat.NoActionBar" />
     </application>
