se implementa otaliastudios camera
parece ir igual de bien que android X camera, incluso en camera v1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
 
         <activity android:name=".camera.androidx.CustomCameraBackActivity" android:parentActivityName=".MainActivity" android:screenOrientation="landscape" />
         <activity android:name=".camera.androidx.CustomCameraFrontActivity" android:parentActivityName=".MainActivity" android:screenOrientation="portrait" />
+        <activity android:name=".camera.otaliastudios.OtaliaCameraActivity" android:parentActivityName=".MainActivity" android:screenOrientation="portrait" />
         <activity android:name=".camera.SimpleCameraActivity" android:parentActivityName=".MainActivity" />
 
         <activity android:name=".network.CatPhotoActivity" android:parentActivityName=".MainActivity" />
