--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     implementation"androidx.camera:camera-view:1.0.0-alpha12"
     implementation "androidx.camera:camera-extensions:1.0.0-alpha12"
     // END CAMERA X
+
+    // OTALIA STUDIOS CAMERA
+    implementation 'com.otaliastudios:cameraview:2.6.2'
 }
