--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
 
     // OTALIA STUDIOS CAMERA
     implementation 'com.otaliastudios:cameraview:2.6.2'
+
+    // FIREBASE
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
 }
